--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,56 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     include(CTest)
 endif()
 
+include(cmake/CheckAndApplyFlags.cmake)
+
+####################
+# Default Settings #
+####################
+
+# Set a default build type if none was specified
+set(default_build_type "RelWithDebInfo")
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  message(STATUS "Setting build type to '${default_build_type}' as none was specified.")
+  set(CMAKE_BUILD_TYPE "${default_build_type}" CACHE
+      STRING "Choose the type of build."
+      FORCE
+  )
+  # Set the possible values of build type for cmake-gui/ccmake
+  set_property(CACHE CMAKE_BUILD_TYPE
+    PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo"
+  )
+endif()
+
+set(default_pic ON)
+if("${CMAKE_POSITION_INDEPENDENT_CODE}" STREQUAL "")
+  message(STATUS "Setting PIC for all targets to '${default_pic}' as no value was specified.")
+  set(CMAKE_POSITION_INDEPENDENT_CODE ${default_pic} CACHE
+    BOOL "Compile all targets with -fPIC"
+    FORCE
+  )
+endif()
+
+set(default_shared_libs OFF)
+if("${BUILD_SHARED_LIBS}" STREQUAL "")
+  message(STATUS "Setting 'build shared libraries' to '${default_shared_libs}' as no value was specified.")
+  set(BUILD_SHARED_LIBS ${default_shared_libs} CACHE
+    BOOL "Compile shared libraries by default instead of static libraries."
+    FORCE
+  )
+endif()
+
+# Export compile_commands.json file.
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+##################
+# Compiler Flags #
+##################
+
+# If we're not a subproject, globally apply our warning flags
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+  add_compile_options(-Wall -Wextra)
+endif()
+
 #####################
 # Printf Dependency #
 #####################
