--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,11 +60,10 @@ target_compile_definitions(gdtoa INTERFACE
 
 # libc_core contains shared files and definitions that are used by libc and libc_hosted
 add_library(c_core INTERFACE)
-target_link_libraries(c_core INTERFACE printf openlibm gdtoa)
+target_link_libraries(c_core INTERFACE printf openlibm gdtoa architecture_specific)
 target_include_directories(c_core
 	INTERFACE
 		${PROJECT_SOURCE_DIR}/include
-		${PROJECT_SOURCE_DIR}/arch/${CMAKE_SYSTEM_PROCESSOR}/include
 )
 
 # libc is a standalone version of the library
@@ -104,10 +103,11 @@ endif()
 # Apply common settings to C and C_hosted targets
 foreach(target c c_hosted)
 	target_include_directories(${target}
+		INTERFACE
+			$<TARGET_PROPERTY:openlibm,INTERFACE_INCLUDE_DIRECTORIES>
 		INTERFACE SYSTEM
 			${PROJECT_SOURCE_DIR}/include
-			$<TARGET_PROPERTY:openlibm,INTERFACE_INCLUDE_DIRECTORIES>
-			$<TARGET_PROPERTY:architecture_specific,INTERFACE_INCLUDE_DIRECTORIES>
+			${PROJECT_SOURCE_DIR}/arch/${CMAKE_SYSTEM_PROCESSOR}/include
 	)
 
 	target_compile_definitions(${target}
@@ -135,6 +135,11 @@ else()
 	if(_nostdlib)
 		target_link_options(c INTERFACE "-nostdlib")
 	endif()
+endif()
+
+check_c_compiler_flag("-nostartfiles" _nostartfiles)
+if("${_nostartfiles}")
+		target_link_options(c INTERFACE "-nostartfiles")
 endif()
 
 # Assert Module
