--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -132,4 +132,6 @@ if(CMAKE_CROSSCOMPILING AND (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME))
 	target_sources(sample_app PRIVATE app/main.c)
 	target_link_libraries(sample_app PRIVATE c)
 	target_linker_map(sample_app)
+	convert_to_hex(sample_app)
+	convert_to_bin(sample_app)
 endif()
